# claude-git

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  RELEASE.md  SESSION_SUMMARY.md  demo_concurrent_workflow.py  demo_conversation_test.py  pyproject.toml  test_cumulative_commits.py  test_file.py  test_format_check.py  test_formatting.py  test_formatting2.py  test_hook_functionality.py
.claude/: claude_desktop_config.json
.github/workflows/: release.yml
hooks/: pre-commit
scripts/: release.sh
src/claude_git/: __init__.py
src/claude_git/cli/: __init__.py  main.py  setup_hooks.py
src/claude_git/core/: __init__.py  git_native_repository.py  repository.py  test_integration.py  worktree_manager.py
src/claude_git/hooks/: capture.py  git_native_handler.py  hook_script.py  session_end.py  session_start.py
src/claude_git/models/: __init__.py  change.py  commit.py  session.py
tests/: __init__.py  test_claude_git_diff_integration.py  test_cli_enhancements.py  test_concurrent_changes.py  test_conflict_detection.py  test_diff_command.py  test_diff_head_behavior.py  test_enhanced_diff.py  test_enhanced_diff_simple.py  test_git_native_analysis.py  test_git_native_hooks.py  test_git_native_repository.py  test_init_safety.py  test_intelligent_cli.py  test_mixed_workflow.py  test_parent_repo_tracking.py  test_repository.py  test_repository_integration.py  test_thinking_collection_e2e.py  test_thinking_text_extraction.py
